--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "editor.wordWrap": "on"
+    "editor.wordWrap": "on",
+    "julia.environmentPath": "/Users/kimonanagnostopoulos/Desktop/Intro to CS/Assignment 1 - Codebase"
 }
